--- a/app.json
+++ b/app.json
@@ -56,7 +56,7 @@
     },
     "STREAM_URL": {
       "description": "URL of Radio Station or Youtube Live video url to stream with /radio command",
-      "value": "https://youtu.be/5qap5aO4i9A",
+      "value": "https://youtube.com/playlist?list=PLiSgEeTex_rUZ0EwKG-Fs5NFT7xESGn_G",
       "required": false
     },
     "REPLY_MESSAGE": {
